# poker44-miner-v2

./: README.md  pyproject.toml  requirements.txt
detector/: features.py  features_ngram.py  inference.py
detector/artifacts/: meta.json
neurons/: miner.py
scripts/: ecosystem.config.js  run_miner.sh
